# Cookie-AutoDelete-SyncHelper

./: README.md  pyproject.toml
src/CAD_sync/: __init__.py
